--- a/app/src/main/res/layout/answer_item.xml
+++ b/app/src/main/res/layout/answer_item.xml
@@ -1,6 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.radiobutton.MaterialRadioButton
+            android:id="@+id/rbAnswer_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Kotlin"/>
+
+        <com.google.android.material.radiobutton.MaterialRadioButton
+            android:id="@+id/rbAnswer_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Java"/>
+
+        <com.google.android.material.radiobutton.MaterialRadioButton
+            android:id="@+id/rbAnswer_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Dart"/>
+
+        <com.google.android.material.radiobutton.MaterialRadioButton
+            android:id="@+id/rbAnswer_4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Swift"/>
+
+    </RadioGroup>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
