--- a/app/src/main/res/layout/fragment_quiz_description.xml
+++ b/app/src/main/res/layout/fragment_quiz_description.xml
@@ -3,46 +3,66 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/quizRecycler"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:itemCount="12" />
+    android:layout_height="match_parent"
+    android:layout_margin="8dp">
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tvTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:textSize="22sp"
+        android:gravity="center"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/quizRecycler"
-        tools:text="What is OOP ?" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="What is the best programming language for android native development ?" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerAnswer"
-        android:layout_width="0dp"
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="vertical"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/tvTitle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvTitle" />
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <com.google.android.material.radiobutton.MaterialRadioButton
+            android:id="@+id/rbAnswer_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Kotlin"/>
+
+        <com.google.android.material.radiobutton.MaterialRadioButton
+            android:id="@+id/rbAnswer_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Java"/>
+
+        <com.google.android.material.radiobutton.MaterialRadioButton
+            android:id="@+id/rbAnswer_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Dart"/>
+
+        <com.google.android.material.radiobutton.MaterialRadioButton
+            android:id="@+id/rbAnswer_4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Swift"/>
+    </RadioGroup>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnAnswer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="Answer"
+        android:text="Next"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/recyclerAnswer" />
+        app:layout_constraintTop_toBottomOf="@id/radioGroup" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
